--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,12 +60,18 @@ jobs:
         run: npm publish --access public --provenance
 
       - name: Create GitHub Release
-        if: startsWith(github.ref, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          TAG=${{ github.ref_name }}
-          gh release create $TAG \
-            --title "Release $TAG" \
-            --generate-notes \
-            --latest
+          # Use ref_name for tag push, or get latest tag for workflow_dispatch
+          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+            TAG=${{ github.ref_name }}
+          else
+            TAG=$(git describe --tags --abbrev=0)
+          fi
+          # Skip if release already exists
+          gh release view $TAG >/dev/null 2>&1 || \
+            gh release create $TAG \
+              --title "Release $TAG" \
+              --generate-notes \
+              --latest
